fixed the row height 100% and justified content start, also added a gap to separate the container from the nav bar. created a landing__organizer to store all the text from the landing page, added a h1 tag to the oorganizer

--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,13 @@ body {
 .row {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 24px;
+  height: 100%;
+  gap: 90px;
 }
 
 .container{
@@ -118,6 +120,16 @@ LANDING
 
 #landing{
   height: 100vh;
+}
+
+.landing__container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.landing__title{
+  color: white;
+  font-size: 120px;
 }
 
 .landing__img--wrapper{
